Added mock test